--- a/public/index.html
+++ b/public/index.html
@@ -30,9 +30,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <h1>
+    <title>
       User Signup, Signin and Signout is implemented in React using LocalStorage
-    </h1>
+    </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
